--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -218,7 +218,7 @@
             <img class="tim-flashlight" src="testImages/Tim_Taschenlampe.png" alt=""/>
             <div class="dropdown" id="dropdown-1">
                 <label>
-                    <input class="text-box" id="text-box-1" type="text" placeholder="Wähle die Richtung des Lichts &#8644;" readonly>
+                    <input class="text-box" id="text-box-1" type="text" placeholder="Klicke hier und wähle die Richtung des Lichts &#8644;" readonly>
                 </label>
                 <div class="options">
                     <div onclick="show('right', 1)">————————></div>
@@ -227,7 +227,7 @@
             </div>
             <div class="dropdown" id="dropdown-2">
                 <label>
-                    <input class="text-box" id="text-box-2" type="text" placeholder="Wähle die Richtung des Lichts &#8644;" readonly>
+                    <input class="text-box" id="text-box-2" type="text" placeholder="Klicke hier und wähle die Richtung des Lichts &#8644;" readonly>
                 </label>
                 <div class="options">
                     <div onclick="show('right', 2)">————————></div>
