Reworked how chapter are displayed

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -19,7 +19,7 @@
     </div>
     <button class="nav-button preamble-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
 </div>
-<div class="chapter" id="chapter-1">
+<div class="chapter">
     <div class="clearfix">
         <div class="section">
             <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
