new pictures, diashow

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -22,7 +22,7 @@
 <div class="chapter">
     <div class="clearfix">
         <div class="section">
-            <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
+            <img class="wrap-figure tim" src="images/Tim.png" alt="">
             <div class="text-tim">Das ist Tim.</div>
         </div>
         <div class="section">
@@ -41,7 +41,7 @@
         Warum soll Tim zum Augenarzt gehen? Schreibe auf.
     </div>
 
-    <img src="testImages/keyboard.png" style="max-width:100px" alt="">
+    <img src="images/keyboard.png" style="max-width:100px" alt="">
     <br>
     <form>
         <label>
@@ -56,8 +56,7 @@
 <div class="chapter">
     <div class="section" onVisible="renameCloseButton;Das ist ein Test">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
-        <img class="eye-small" src="testImages/Auge_Klein.png" alt=""/>
-        <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
+        <img class="eye-small" src="images/eye.png" alt=""/>
     </div>
     <div class="watermark">
         <div class="section">
@@ -126,23 +125,23 @@
                 <div style="display: block">
                     <div>
                         <div class="text">
-                            <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                            <img src="icons/lightbulb.png" class="task-icon" alt="">
                             Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
                             Netzhaut erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                         </div>
                     </div>
                     <div class="diashow">
                         <div class="slide">
-                            <img src="testImages/Aufbau_Auge.png" alt=""/>
+                            <img src="images/eye_structure.png" alt=""/>
                         </div>
                         <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
+                            <img src="images/eye_structure_1.png" alt=""/>
                         </div>
                         <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
+                            <img src="images/eye_structure_2.png" alt=""/>
                         </div>
                         <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
+                            <img src="images/eye_structure_3.png" alt=""/>
                         </div>
                     </div>
                     <div class="info-and-slide">
@@ -161,10 +160,7 @@
                     <div class="info-and-slide">
                         <div class="text">
                             Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über
-                            den
-                            Sehnerv
-                            an
-                            das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                            den Sehnerv an das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
                         </div>
                     </div>
                 </div>
@@ -190,9 +186,9 @@
         <div class="information">
             <div>
                 <div class="light-bulb">
-                    <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                    <img src="icons/lightbulb.png" class="task-icon" alt="">
                 </div>
-                <img class="forest" src="testImages/Wald.png" alt=""/>
+                <img class="forest" src="images/forest.png" alt=""/>
                 <div class="section">
                     <div class="forest-text">
                         Licht breitet sich immer geradlinig aus.
@@ -227,7 +223,7 @@
             Richtung der Lichtstrahl geht.<br>
         </div>
         <div class="task-img">
-            <img class="tim-flashlight" src="testImages/Tim_Taschenlampe.png" alt=""/>
+            <img class="tim-lamp" src="images/Tim_lamp.png" alt=""/>
             <div class="dropdown" id="dropdown-1">
                 <input class="text-box" id="text-box-1" type="image"
                        alt="Klicke hier und wähle die Richtung des Lichts">
@@ -252,13 +248,13 @@
                     </div>
                 </div>
             </div>
-            <img class="door" src="testImages/Tuer.png" alt=""/>
+            <img class="door" src="images/door.png" alt=""/>
         </div>
     </div>
     <div class="section" onVisible="renameCloseButton;Beenden">
         <div class="information">
             <div class="text">
-                <img src="testImages/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
+                <img src="icons/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
