--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -274,3 +274,4 @@
 <script src="js/learningUnit.js"></script>
 <script src="js/dragAndDrop.js"></script>
 <script src="js/dropDown.js"></script>
+<script src="js/playAudio.js"></script>
