save text function for textarea

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -45,11 +45,11 @@
     <br>
     <form>
         <label>
-            <textarea class="text-area" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
+            <textarea class="text-area" id="text-area-0" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
         </label>
     </form>
     <br>
-    <input class="submit save" type="submit" value="Speichern" onclick="enableNextButton()">
+    <input class="submit save" type="submit" value="Speichern" onclick="saveText(this)" number="0">
 </div>
 <!--</div>-->
 
