no edition after save css learningUnit correction

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -173,11 +173,10 @@
         <h1>2 Ausbreitung von Licht</h1>
         <div class="text">
             <button class="reading" id="reading-button-2" onclick="playAudio(this)" track-number="2">Vorlesen</button>
-            <br>
-            Tim wacht in der Nacht auf und möchte sich etwas zu trinken holen. In seinem Zimmer ist es dunkel. Seine
-            Lampe ist kaputt. <br>
-            Er hat aber eine Taschenlampe <img src="images/lamp.png" alt=""/>
-            auf seinem Nachttisch stehen, mit der er den Weg zur Tür ganz einfach finden kann.<br>
+            <br> Tim wacht in der Nacht auf und möchte sich etwas zu trinken holen. In seinem Zimmer ist es dunkel.
+            Seine Lampe ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen,
+            mit der er den Weg zur Tür ganz einfach finden kann.
+            <img class="lamp" src="images/lamp.png" alt=""/>
         </div>
     </div>
     <div class="section">
