--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -101,13 +101,13 @@
                 </div>
                 Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
                 <div class="drop-start">
-                    <img class="draggable-card" id="drag-1" draggable="true" src="testImages/lederhaut.png" alt="">
+                    <img class="draggable-card" id="drag-1" draggable="true" src="icons/lederhaut.png" alt="">
                 </div>
                 <div class="drop-start">
-                    <img class="draggable-card" id="drag-2" draggable="true" src="testImages/pupille.png" alt="">
+                    <img class="draggable-card" id="drag-2" draggable="true" src="icons/pupille.png" alt="">
                 </div>
                 <div class="drop-start">
-                    <img class="draggable-card" id="drag-3" draggable="true" src="testImages/iris.png" alt="">
+                    <img class="draggable-card" id="drag-3" draggable="true" src="icons/iris.png" alt="">
                 </div>
             </div>
         </div>
@@ -270,10 +270,9 @@
 
 <div class="chapter">
     <div class="section" onVisible="renameCloseButton;Beenden">
-        <img class="wrap-figure tim" src="images/Tim_with_glasses.png" alt="">
-    </div>
-    <div class="section" onVisible="disableNextButton">
-
+        <div class="section" onVisible="disableNextButton">
+            <img class="wrap-figure tim" src="images/Tim_with_glasses.png" alt="">
+        </div>
     </div>
 </div>
 </body>
