--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -49,7 +49,7 @@
         </label>
     </form>
     <br>
-    <input class="submit save" type="submit" value="Speichern" onclick="saveText(this)" number="0">
+    <input class="submit save" type="submit" value="Speichern" onclick="saveText(this)" number="0" description="Aufgabe-1">
 </div>
 <!--</div>-->
 
