--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -17,7 +17,8 @@
     <div class="text">
         Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
     </div>
-    <button class="nav-button preamble-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
+    <button class="nav-button preamble-button" description="Verstanden Taste"
+            onclick="javaBridge.disablePreamble(); saveTimestamp(this)">Verstanden!</button>
 </div>
 <div class="chapter">
     <div class="clearfix">
@@ -26,7 +27,8 @@
             <div class="text-tim">Das ist Tim.</div>
         </div>
         <div class="section">
-            <button class="reading" id="reading-button-0" onclick="playAudio(this)" track-number="0">Vorlesen</button>
+            <button class="reading" id="reading-button-0" onclick="playAudio(this); saveTimestamp(this)"
+                    track-number="0" description="Vorlesen Kapitel 0'">Vorlesen</button>
             <div class="text">
                 Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe. Er hat oft
                 Kopfschmerzen. Ständig kneift er die Augen zusammen. Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.
@@ -45,11 +47,13 @@
     <br>
     <form>
         <label>
-            <textarea class="text-area" id="text-area-0" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
+            <textarea class="text-area" id="text-area-0"
+                      placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
         </label>
     </form>
     <br>
-    <input class="submit save" type="submit" value="Speichern" onclick="saveText(this)" number="0" description="Aufgabe-1">
+    <input class="submit save" type="submit" value="Speichern" onclick="saveText(this)" number="0"
+           description="Speichern Text-Antwort">
 </div>
 <!--</div>-->
 
@@ -61,7 +65,8 @@
     <div class="watermark">
         <div class="section">
             <div class="text">
-                <button class="reading" id="reading-button-1-1" onclick="playAudio(this)" track-number="1-1">Vorlesen
+                <button class="reading" id="reading-button-1-1" onclick="playAudio(this); saveTimestamp(this)"
+                        track-number="1-1" description="Vorlesen 'Kapitel 1, Text 1'">Vorlesen
                 </button>
                 <br>
                 Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer.
@@ -75,7 +80,8 @@
     <div>
         <div class="section">
             <div class="text">
-                <button class="reading" id="reading-button-1-2" onclick="playAudio(this)" track-number="1-2">Vorlesen
+                <button class="reading" id="reading-button-1-2" onclick="playAudio(this); saveTimestamp(this)"
+                        track-number="1-2" description="Vorlesen 'Kapitel 1, Text 2'">Vorlesen
                 </button>
                 <br>
                 Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
@@ -91,7 +97,8 @@
         <div class="task">
             <div class="wrap-text">
                 <img src="icons/Draggable-Card.svg" class="task-icon" alt=""/>
-                <button class="demo-video" id="video-demo-1" onclick="showVideo(this)" track-number="1">Demo-Video
+                <button class="demo-video" id="video-demo-1" onclick="showVideo(this); saveTimestamp(this)"
+                        track-number="1" description="Demo-Video Drag&Drop">Demo-Video
                 </button>
                 <div id="modal-window-1" class="modal">
                     <div class="modal-content">
@@ -116,7 +123,8 @@
             <div class="drop-field" id="drop-2"></div>
             <div class="drop-field" id="drop-3"></div>
         </div>
-        <input class="submit save" id="drag-and-drop-save-button" type="submit" value="Speichern" onclick="save()">
+        <input class="submit save" id="drag-and-drop-save-button" type="submit" value="Speichern"
+               description="Speichern Drag&Drop" onclick="save(); saveTimestamp(this)">
     </div>
     <br>
     <div class="section">
@@ -172,7 +180,8 @@
     <div class="section">
         <h1>2 Ausbreitung von Licht</h1>
         <div class="text">
-            <button class="reading" id="reading-button-2" onclick="playAudio(this)" track-number="2">Vorlesen</button>
+            <button class="reading" id="reading-button-2" onclick="playAudio(this); saveTimestamp(this)"
+                    track-number="2" description="Vorlesen Kapitel 2">Vorlesen</button>
             <br> Tim wacht in der Nacht auf und möchte sich etwas zu trinken holen. In seinem Zimmer ist es dunkel.
             Seine Lampe ist kaputt. Er hat aber eine Taschenlampe auf seinem Nachttisch stehen,
             mit der er den Weg zur Tür ganz einfach finden kann.
@@ -203,7 +212,8 @@
     <div class="section">
         <h1>3 Der Weg des Lichts</h1>
         <div class="text">
-            <button class="reading" id="reading-button-3" onclick="playAudio(this)" track-number="3">Vorlesen</button>
+            <button class="reading" id="reading-button-3" onclick="playAudio(this); saveTimestamp(this)"
+                    track-number="3" description="Vorlesen Kapitel 3">Vorlesen</button>
             <br>
             Auch das Licht der Taschenlampe breitet sich geradlinig aus. Alles, was Tim nicht mit dem Lichtstrahl
             anleuchtet, kann er nicht sehen. Die Gegenstände, die von der Taschenlampe angestrahlt werden, werfen
@@ -248,7 +258,7 @@
             <img class="door" src="images/door.png" alt=""/>
         </div>
         <input class="submit save" id="dropdown-save-button" type="submit" value="Speichern" track-number="2"
-               onclick="checkAnswer(); showVideo(this)">
+              description="Speichern DropDown Aufgabe" onclick="checkAnswer(); showVideo(this); saveTimestamp(this)">
         <div id="modal-window-2" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
