--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -13,13 +13,17 @@
     <h1 id="index"></h1>
 </div>
 
-<div class="preamble" id="preamble">
-    <div class="text">
-        Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
+<div class="container">
+    <div class="preamble" id="preamble">
+        <div class="text">Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!</div>
+        <label>
+            <input type="text" id="experiment-id" placeholder="Bitte geben Sie die Experiment-ID hier ein"/>
+        </label>
+        <button class="nav-button preamble-button" description="Verstanden Taste"
+                onclick="disablePreamble(); saveTimestamp(this)">Verstanden!</button>
     </div>
-    <button class="nav-button preamble-button" description="Verstanden Taste"
-            onclick="javaBridge.disablePreamble(); saveTimestamp(this)">Verstanden!</button>
 </div>
+
 <div class="chapter">
     <div class="clearfix">
         <div class="section">
