This'll do for now

--- a/EyeTrackingTest/Eyetracker.html
+++ b/EyeTrackingTest/Eyetracker.html
@@ -3,12 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="eyetrackingstyle.css">
+    <link rel="stylesheet" href="css/eyetrackingstyle.css">
+    <link rel="stylesheet" href="css/learningUnit.css">
+    <link rel="stylesheet" href="css/defaultTheme.css">
     <title>Document</title>
 </head>
 <body>
+
+<div class="preamble" id="preamble">
+    <div class="text">
+        Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
+    </div>
+    <button class="nav-button preamble-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
+</div>
 <div id="callibration-box"></div>
 <canvas id="circles"></canvas>
+
+
 </html>
 <script src="js/learningUnit.js"></script>
 <script src="js/dragAndDrop.js"></script>
