--- a/EyeTrackingTest/Eyetracker.html
+++ b/EyeTrackingTest/Eyetracker.html
@@ -18,8 +18,9 @@
 </div>
 <div id="callibration-box"></div>
 <canvas id="circles"></canvas>
-
-
+<div class="chapter">
+    <div class="section">Test</div>
+</div>
 </html>
 <script src="js/learningUnit.js"></script>
 <script src="js/dragAndDrop.js"></script>
