--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -107,7 +107,7 @@
                 <div id="modal-window-1" class="modal">
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <video class="video" id="video-1" type="video/mp4" loop></video>
+                        <video class="video" id="video-1" type="video/mp4"></video>
                     </div>
                 </div>
                 Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
@@ -230,7 +230,7 @@
     </div>
     <div class="section" onVisible="disableNextButton">
         <div class="task">
-            Welchen Weg nimmt das Licht von der Taschenlampe zur Tür und von dort zurück zu Tim? Wähle aus in welche
+            Welchen Weg nimmt das Licht von der Taschenlampe zur Tür und von dort zurück zu Tim? Wähle aus, in welche
             Richtung der Lichtstrahl geht.<br>
         </div>
         <div class="task-img">
@@ -266,7 +266,7 @@
         <div id="modal-window-2" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <video class="video" id="video-2" type="video/mp4" loop></video>
+                <video class="video" id="video-2" type="video/mp4"></video>
             </div>
         </div>
     </div>
