--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -284,7 +284,9 @@
 
 <div class="chapter">
     <div class="section" onVisible="disableNextButton">
-
+        <div class="text">
+            Danke für die Teilnahme!
+        </div>
     </div>
 </div>
 </body>
