--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -107,7 +107,8 @@
                 <div id="modal-window-1" class="modal">
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <video class="video" id="video-1" type="video/mp4"></video>
+                        <video class="video" id="video-1" src="video/video-1.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
@@ -266,7 +267,7 @@
         <div id="modal-window-2" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <video class="video" id="video-2" type="video/mp4"></video>
+                <video class="video" id="video-2" src="video/video-2.mp4" type="video/mp4"></video>
             </div>
         </div>
     </div>
