--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -107,7 +107,7 @@
                 <div id="modal-window-1" class="modal">
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <video class="video" id="video-1" src="video/video-1.mp4" type="video/mp4">
+                        <video class="video" id="video-1" src="video/video-1.mp4" type="video/mp4" controls preload="auto">
                         </video>
                     </div>
                 </div>
@@ -267,7 +267,8 @@
         <div id="modal-window-2" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <video class="video" id="video-2" src="video/video-2.mp4" type="video/mp4"></video>
+                <video class="video" id="video-2" src="video/video-2.mp4" type="video/mp4" controls preload="auto">
+                </video>
             </div>
         </div>
     </div>
